--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    font-family: 'Ropa Sans';
+    font-style: normal;
+    font-weight: 400;
 }
 
 .container{
     background-color:  #E5E5E5;
     width: 100vw;
-    height: 100vw;
+    height: 1364px;
     padding-top: 100px;
 }
 
@@ -19,21 +23,17 @@
     height: 1264px;
     margin: auto;
     background: #FFFFFF;
+    display: flex;
+    flex-direction: column;
 }
 
 .header__page{
-    font-family: 'Ropa Sans';
-    font-style: normal;
-    font-weight: 400;
     width: 697px;
     height: 49px;
-
     background: #FFFFFF;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
-    padding-left: 44px;
-    padding-top: 8px;
-    padding-right: 31px;
-
+    padding: 8px 13px 0px 44px;
+    display: flex;
 }
 
 .header__page-title{
@@ -41,13 +41,10 @@
     font-size: 30px;
     line-height: 32px;
     color: #777777;
-    float:left;
-
 }
 
 .header__page-subtitle{
     width: 38px;
-    float: left;
     font-size: 10px;
     line-height: 11px;
     color: #AAAAAA;
@@ -56,64 +53,42 @@
 }
 
 .header__page__menu-icon{
-    float: right;
     margin-top: 10px;
+    width: 18px;
+    height: 12px;
+    margin-left: 503px;
 }   
 
 .page__carrossel{
     width: 608px;
     height: 259px;
-    margin: auto;
     margin-top: 20px;
+    margin-left: 44px;
     background: url(./assets/image-sala.png);
+    display: flex;
+    justify-content: space-between;
 }
 
-.page__carrossel__elipse-left{
+.page__elipse{
     width: 39px;
     height: 39px;
     border-radius: 39px;
     background: rgba(141, 141, 141, 0.62);
     padding-top: 10px;
     padding-left: 14px;
-    float: left;
-    margin-top: 110px;
-    margin-left: 12px;
+    margin: 110px 12px 0px;
 }
-.page__carrossel__elipse-right{
-    width: 39px;
-    height: 39px;
-    border-radius: 39px;
-    background: rgba(141, 141, 141, 0.62);
-    padding-top: 10px;
-    padding-left: 14px;
-    float: right;
-    margin-top: 110px;
-    margin-right: 12px;
-}   
 
 .page__destaque{
-    margin-top: 37px;
-    margin-left: 44px;
-    margin-right: 45px;
-    margin-bottom: 0px;
-    font-family: 'Ropa Sans';
-    font-style: normal;
-    font-weight: 400;
-
+    margin: 37px 45px 0px 44px;
+    display: flex;
+    justify-content: space-between;
 }
 
-.page__destaque__left{
+.page__destaque__content{
     width: 256px;
     height: 242px;
     background: #EEEEEE;
-    float: left;
-}
-
-.page__destaque__right{
-    width: 256px;
-    height: 242px;
-    background: #EEEEEE;
-    float: right;
 }
 
 .page__destaque__image{
@@ -124,26 +99,25 @@
     margin-left: 12px;
     margin-right: 13px;
     padding-top: 9px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .page__destaque__price{
-    width: 86px;
     font-weight: 400;
     font-size: 25px;
     line-height: 27px;
     color: #888888;
-    float: left;
 }
 
-.page__destaque__rectangle{
+.page__destaque__rectangle, .page__destaque__rectangle-right{
     width: 56px;
     height: 21px;
     border-radius: 10.5px;
     background: #51D275;
-    float:right;
 }
 
-.page__destaque__tag{
+.page__destaque__tag {
     font-size: 20px;
     line-height: 21px;
     align-items: center;
@@ -157,12 +131,56 @@
     line-height: 10px;
     text-align: justify;
     color: #555555;
-    margin-top: 32px;
-    margin-left: 12px;
-    margin-right: 13px;
+    margin: 3px 13px 0px;
 }
 
-.page__destaque__right .page__destaque__rectangle{
-    background: #DC9730;    
+.page__destaque__rectangle-right {
+    background-color: #DC9730;    
 }
+
+.sections{
+    font-size: 25px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0px 44px;
+}
+
+.sections_title{
+color: #888888;
+
+text-align: center;
+margin-top: 45px;
+
+}
+
+.section__rectangle1, .section__rectangle2, .section__rectangle3{
+width: 608px;
+height: 80px;
+margin-top: 13px;
+}
+
+.section__text{
+    color: #FFFFFF;
+    margin-top: 26px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+ 
+}
+
+.section__rectangle1{
+    background-image: url(./assets/image-industrial.png);
+    opacity: 0.7;
+
+}
+.section__rectangle2{
+    background-image: url(./assets/image-modern.png);
+    opacity: 0.7;
+
+}
+.section__rectangle3{
+    background-image: url(./assets/image-classic.png);
+    opacity: 0.7;
+
+}
+
 
